to scan the extension while installing and redesigned popup

--- a/dashboard.html
+++ b/dashboard.html
@@ -536,6 +536,21 @@
             </div>
         </div>
 
+        <h2 class="section-title">Suspected Extensions (Install Log)</h2>
+        <table class="log-table" style="margin-bottom: 40px;">
+            <thead>
+                <tr>
+                    <th>Time</th>
+                    <th>Extension Name</th>
+                    <th>Risk Tier</th>
+                    <th>Install Type</th>
+                </tr>
+            </thead>
+            <tbody id="ext-log-body">
+                <!-- Rows injected by JS -->
+            </tbody>
+        </table>
+
         <h2 class="section-title">Recent Activity Log</h2>
         <table class="log-table">
             <thead>
