--- a/signup.html
+++ b/signup.html
@@ -246,6 +246,9 @@
             style="font-weight: 700; color: #ffc107; text-transform: uppercase; font-size: 14px; margin-bottom: 10px; border-bottom: 1px solid #555; padding-bottom: 10px;">
             📧 EMAIL SENT!</div>
         <div style="font-size: 14px; margin-bottom: 10px;">Check your inbox for the verification code.</div>
+        <div style="font-size: 13px; color: #ffc107; margin-top: 8px; font-weight: 500;">
+            ⚠️ Can't find it? Check your <strong>Spam/Junk</strong> folder!
+        </div>
         <div style="font-size: 12px; opacity: 0.8; margin-top: 10px;">Redirecting to verification page...</div>
     </div>
 
