--- a/login.html
+++ b/login.html
@@ -153,8 +153,19 @@
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
-                <input type="password" id="password" required placeholder="Enter your password"
-                    autocomplete="current-password">
+                <div style="position: relative;">
+                    <input type="password" id="password" required placeholder="Enter your password"
+                        autocomplete="current-password" style="padding-right: 45px;">
+                    <button type="button" id="toggle-password" style="position: absolute; right: 10px; top: 50%; transform: translateY(-50%); 
+                        background: transparent; border: none; cursor: pointer; padding: 5px; width: auto; margin: 0;"
+                        title="Show/Hide Password">
+                        <svg id="eye-icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="2">
+                            <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
+                            <circle cx="12" cy="12" r="3"></circle>
+                        </svg>
+                    </button>
+                </div>
             </div>
             <button type="button" id="login-btn" disabled>Loading...</button>
             <div class="error" id="error-msg"></div>
