--- a/warning.html
+++ b/warning.html
@@ -9,15 +9,27 @@
 </head>
 
 <body>
-    <div class="container">
+    <!-- Proceed Anyway button in top right corner -->
+    <a href="#" id="proceed-unsafe" style="position: fixed; top: 20px; right: 20px; 
+              color: #721c24; text-decoration: none; 
+              background: white; padding: 10px 20px; 
+              border-radius: 8px; border: 2px solid #dc3545;
+              font-weight: 600; font-size: 14px;
+              box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+              transition: all 0.3s;
+              z-index: 1000;" onmouseover="this.style.background='#dc3545'; this.style.color='white';"
+        onmouseout="this.style.background='white'; this.style.color='#721c24';">
+        ⚠️ Proceed Anyway (Unsafe)
+    </a>
+
+    <div class="container" id="warning-container">
+        <!-- Default content (will be replaced by JS if banned) -->
         <div class="icon">⚠️</div>
         <h1>Phishing Attempt Blocked</h1>
         <p>PhishingShield has detected that the website you are trying to visit may be unsafe.</p>
         <p>The URL exhibited suspicious characteristics consistent with phishing attacks.</p>
         <div class="actions">
             <button id="go-back">Go Back to Safety</button>
-            <p style="margin-top: 20px; font-size: 0.9em;"><a href="#" id="proceed-unsafe"
-                    style="color: #721c24;">Advanced: Proceed anyway (unsafe)</a></p>
         </div>
     </div>
     <script src="js/warning.js"></script>
