--- a/admin.html
+++ b/admin.html
@@ -511,6 +511,18 @@
                 </div>
                 <p style="margin-bottom:20px; color:#6c757d;">User-submitted reports. Verify and ban malicious domains.
                 </p>
+
+                <!-- Filter Controls -->
+                <div class="filter-group" style="margin-bottom: 20px; display: flex; gap: 10px;">
+                    <button class="btn btn-sm btn-active" onclick="setReportFilter('all')" id="filter-all"
+                        style="padding: 5px 15px;">All</button>
+                    <button class="btn btn-sm btn-outline" onclick="setReportFilter('pending')" id="filter-pending"
+                        style="padding: 5px 15px;">Pending</button>
+                    <button class="btn btn-sm btn-outline" onclick="setReportFilter('banned')" id="filter-banned"
+                        style="padding: 5px 15px;">Banned</button>
+                    <button class="btn btn-sm btn-outline" onclick="setReportFilter('ignored')" id="filter-ignored"
+                        style="padding: 5px 15px;">Ignored</button>
+                </div>
                 <table id="reports-table">
                     <thead>
                         <tr>
