--- a/admin.html
+++ b/admin.html
@@ -540,62 +540,6 @@
             </div>
         </div>
 
-        <!-- BANNED SITES TAB -->
-        <div id="banned-sites" class="tab-content">
-            <div class="table-container">
-                <div class="section-header">
-                    <h3>🚫 Banned Websites Registry</h3>
-                    <button class="btn btn-outline" id="btn-refresh-banned">Refresh List</button>
-                </div>
-                <p style="margin-bottom:20px; color:#6c757d;">
-                    List of all websites that have been banned by administrators.
-                </p>
-                <table id="banned-table">
-                    <thead>
-                        <tr>
-                            <th>Domain / URL</th>
-                            <th>Banned Date</th>
-                            <th>Reported By</th>
-                            <th>Admin Actions</th>
-                        </tr>
-                    </thead>
-                    <tbody id="banned-table-body">
-                        <tr>
-                            <td colspan="4" style="text-align:center;">Loading banned sites...</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-
-        <!-- BANNED SITES TAB -->
-        <div id="banned-sites" class="tab-content">
-            <div class="table-container">
-                <div class="section-header">
-                    <h3>🚫 Banned Websites Registry</h3>
-                    <button class="btn btn-outline" onclick="loadBannedSites()">Refresh List</button>
-                </div>
-                <p style="margin-bottom:20px; color:#6c757d;">
-                    List of all websites that have been banned by administrators.
-                </p>
-                <table id="banned-table">
-                    <thead>
-                        <tr>
-                            <th>Domain / URL</th>
-                            <th>Banned Date</th>
-                            <th>Reported By</th>
-                            <th>Banned By</th>
-                        </tr>
-                    </thead>
-                    <tbody id="banned-table-body">
-                        <tr>
-                            <td colspan="4" style="text-align:center;">Loading banned sites...</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-
         <!-- LOGS TAB -->
         <div id="logs" class="tab-content">
             <div class="table-container">
@@ -702,6 +646,73 @@
             <div id="modal-footer"
                 style="padding:20px; background:#f8f9fa; text-align:right; display:flex; justify-content:flex-end; gap:10px;">
                 <button id="modal-close-btn" class="btn btn-outline">Close</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- REPORT DETAIL MODAL -->
+    <div id="report-modal" class="hidden"
+        style="position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.5); z-index:5000; display:flex; justify-content:center; align-items:center;">
+        <div
+            style="background:white; width:600px; max-height:80vh; border-radius:12px; display:flex; flex-direction:column; overflow:hidden; box-shadow: 0 10px 25px rgba(0,0,0,0.2);">
+            <div
+                style="padding:20px; border-bottom:1px solid #eee; display:flex; justify-content:space-between; align-items:center;">
+                <h3 style="margin:0;">Report Investigation</h3>
+                <button id="report-modal-close-x"
+                    style="border:none; background:none; font-size:24px; cursor:pointer; color:#adb5bd;">&times;</button>
+            </div>
+
+            <div style="padding:24px; overflow-y:auto; flex:1;">
+                <!-- URL Section -->
+                <div style="margin-bottom:24px;">
+                    <label
+                        style="font-size:11px; color:#6c757d; font-weight:700; text-transform:uppercase; letter-spacing:0.5px;">Reported
+                        Resource</label>
+                    <div id="report-modal-url"
+                        style="background:#f8f9fa; padding:12px; border-radius:8px; font-family:monospace; color:#0d6efd; word-break:break-all; margin-top:8px; border:1px solid #dee2e6; font-size:14px;">
+                        http://example.com/login
+                    </div>
+                </div>
+
+                <!-- Meta Info -->
+                <div style="display:grid; grid-template-columns: 1fr 1fr; gap:20px; margin-bottom:24px;">
+                    <div>
+                        <label
+                            style="font-size:11px; color:#6c757d; font-weight:700; text-transform:uppercase; letter-spacing:0.5px;">Reporter</label>
+                        <div style="display:flex; align-items:center; gap:8px; margin-top:8px;">
+                            <div
+                                style="width:24px; height:24px; background:#e9ecef; border-radius:50%; display:flex; align-items:center; justify-content:center; font-size:12px; font-weight:bold; color:#6c757d;">
+                                U</div>
+                            <span id="report-modal-reporter" style="font-weight:500;">User</span>
+                        </div>
+                    </div>
+                    <div>
+                        <label
+                            style="font-size:11px; color:#6c757d; font-weight:700; text-transform:uppercase; letter-spacing:0.5px;">Timestamp</label>
+                        <div id="report-modal-date" style="margin-top:8px; font-weight:500;">Oct 20, 2025</div>
+                    </div>
+                </div>
+
+                <!-- Analysis/Status -->
+                <div>
+                    <label
+                        style="font-size:11px; color:#6c757d; font-weight:700; text-transform:uppercase; letter-spacing:0.5px;">Current
+                        Status</label>
+                    <div id="report-modal-status-container" style="margin-top:8px;">
+                        <!-- Injected JS -->
+                        <span class="badge" style="background:#ffc107; color:black">PENDING REVIEW</span>
+                    </div>
+                    <p style="font-size:13px; color:#6c757d; margin-top:8px; line-height:1.5;">
+                        This URL was flagged by a user as potentially malicious. Please verify the content before taking
+                        action.
+                    </p>
+                </div>
+            </div>
+
+            <!-- Footer Actions -->
+            <div id="report-modal-footer"
+                style="padding:20px; background:#f8f9fa; border-top:1px solid #eee; text-align:right; display:flex; justify-content:flex-end; gap:12px;">
+                <!-- Dynamic Buttons -->
             </div>
         </div>
     </div>
