--- a/admin.html
+++ b/admin.html
@@ -4,45 +4,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PhishingShield - Admin Portal</title>
+    <title>PhishingShield | Command Center</title>
     <style>
         :root {
-            --primary: #0d6efd;
-            --secondary: #6c757d;
-            --success: #198754;
-            --info: #0dcaf0;
-            --warning: #ffc107;
-            --danger: #dc3545;
-            --dark: #212529;
-            --light: #f8f9fa;
-            --bg: #f3f4f6;
+            /* Professional Color Palette (Slate & Blue) */
+            --primary: #2563eb;
+            --primary-bg: rgba(37, 99, 235, 0.1);
+            --secondary: #64748b;
+            --success: #10b981;
+            --info: #06b6d4;
+            --warning: #f59e0b;
+            --danger: #ef4444;
+            --dark: #0f172a;
+            --light: #f8fafc;
+            --bg: #f1f5f9;
             --sidebar-width: 260px;
+            --border-color: #e2e8f0;
+            --shadow-sm: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+            --shadow-md: 0 4px 6px -1px rgb(0 0 0 / 0.1);
         }
 
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+            outline: none;
         }
 
         body {
-            font-family: 'Segoe UI', system-ui, -apple-system, sans-serif;
+            font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
             background-color: var(--bg);
-            color: var(--dark);
+            color: #334155;
             height: 100vh;
             display: flex;
             overflow: hidden;
+            -webkit-font-smoothing: antialiased;
         }
 
-        /* Sidebar Styles */
+        /* --- SIDEBAR --- */
         aside {
             width: var(--sidebar-width);
-            background-color: var(--dark);
+            background: linear-gradient(180deg, #0f172a 0%, #1e293b 100%);
             color: #fff;
             display: flex;
             flex-direction: column;
             padding: 20px 0;
-            box-shadow: 4px 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 4px 0 24px rgba(0, 0, 0, 0.05);
+            z-index: 20;
         }
 
         .brand {
@@ -54,23 +62,24 @@
         }
 
         .brand img {
-            width: 40px;
-            height: 40px;
-            border-radius: 50%;
+            width: 36px;
+            height: 36px;
+            border-radius: 8px;
+            /* Sharper logo */
+            box-shadow: 0 0 15px rgba(37, 99, 235, 0.5);
         }
 
         .brand h2 {
-            font-size: 20px;
-            font-weight: 600;
-            letter-spacing: 0.5px;
+            font-size: 18px;
+            font-weight: 700;
+            letter-spacing: -0.5px;
+            color: white;
         }
 
-        .brand span {
-            color: var(--primary);
-        }
-
+        /* Navigation */
         nav {
             flex: 1;
+            margin-bottom: 20px;
         }
 
         nav ul {
@@ -78,52 +87,53 @@
         }
 
         nav li {
-            position: relative;
+            margin-bottom: 4px;
         }
 
         nav a {
             display: flex;
             align-items: center;
             gap: 12px;
-            padding: 14px 24px;
-            color: #adb5bd;
+            padding: 12px 24px;
+            color: #94a3b8;
             text-decoration: none;
-            transition: 0.3s;
+            transition: all 0.2s ease;
             font-weight: 500;
+            font-size: 14px;
+            border-left: 3px solid transparent;
         }
 
         nav a:hover,
         nav a.active {
             color: #fff;
-            background-color: rgba(255, 255, 255, 0.1);
-            border-left: 4px solid var(--primary);
-        }
-
-        nav a i {
-            width: 20px;
-            text-align: center;
+            background: rgba(255, 255, 255, 0.05);
+            border-left-color: var(--primary);
         }
 
         .user-panel {
             padding: 24px;
             border-top: 1px solid rgba(255, 255, 255, 0.1);
+            background: rgba(0, 0, 0, 0.1);
         }
 
         .user-panel h6 {
-            color: #adb5bd;
-            margin-bottom: 5px;
-            font-size: 12px;
+            color: #64748b;
+            font-size: 11px;
             text-transform: uppercase;
+            letter-spacing: 0.5px;
+            margin-bottom: 4px;
         }
 
         .user-panel p {
+            font-size: 14px;
             font-weight: 600;
+            color: white;
         }
 
-        /* Main Content */
+        /* --- MAIN CONTENT --- */
         main {
             flex: 1;
-            padding: 30px;
+            padding: 32px;
             overflow-y: auto;
         }
 
@@ -131,42 +141,66 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            margin-bottom: 30px;
+            margin-bottom: 32px;
         }
 
         h1 {
-            font-size: 28px;
+            font-size: 24px;
             font-weight: 700;
             color: var(--dark);
+            letter-spacing: -0.5px;
         }
 
         .date-badge {
             background: white;
             padding: 8px 16px;
-            border-radius: 20px;
-            font-size: 14px;
+            border-radius: 99px;
+            font-size: 13px;
+            font-weight: 500;
             color: var(--secondary);
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
+            border: 1px solid var(--border-color);
+            box-shadow: var(--shadow-sm);
         }
 
-        /* Dashboard Grid */
+        /* --- DASHBOARD CARDS --- */
         .stats-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
             gap: 24px;
-            margin-bottom: 30px;
+            margin-bottom: 32px;
         }
 
         .card {
             background: white;
-            border-radius: 12px;
+            border-radius: 16px;
             padding: 24px;
-            box-shadow: 0 2px 12px rgba(0, 0, 0, 0.04);
-            transition: transform 0.2s;
+            box-shadow: var(--shadow-sm);
+            border: 1px solid var(--border-color);
+            transition: all 0.3s ease;
+            position: relative;
+            overflow: hidden;
         }
 
         .card:hover {
             transform: translateY(-4px);
+            box-shadow: var(--shadow-md);
+            border-color: #cbd5e1;
+        }
+
+        .card::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 4px;
+            background: linear-gradient(90deg, var(--primary), transparent);
+            opacity: 0;
+            transition: opacity 0.3s;
+        }
+
+        .card:hover::before {
+            opacity: 1;
         }
 
         .card-header {
@@ -177,67 +211,75 @@
         }
 
         .card-icon {
-            width: 48px;
-            height: 48px;
+            width: 44px;
+            height: 44px;
             border-radius: 12px;
             display: flex;
             justify-content: center;
             align-items: center;
-            font-size: 24px;
+            font-size: 20px;
         }
 
         .bg-blue {
-            background-color: rgba(13, 110, 253, 0.1);
+            background: var(--primary-bg);
             color: var(--primary);
         }
 
         .bg-green {
-            background-color: rgba(25, 135, 84, 0.1);
+            background: rgba(16, 185, 129, 0.1);
             color: var(--success);
         }
 
         .bg-yellow {
-            background-color: rgba(255, 193, 7, 0.1);
+            background: rgba(245, 158, 11, 0.1);
             color: var(--warning);
         }
 
         .bg-red {
-            background-color: rgba(220, 53, 69, 0.1);
+            background: rgba(239, 68, 68, 0.1);
             color: var(--danger);
         }
 
         .card-title {
             color: var(--secondary);
-            font-size: 14px;
+            font-size: 13px;
             font-weight: 600;
             text-transform: uppercase;
+            letter-spacing: 0.5px;
         }
 
         .card-value {
-            font-size: 32px;
+            font-size: 28px;
             font-weight: 700;
             color: var(--dark);
-            margin-bottom: 8px;
+            margin-top: 5px;
         }
 
         .card-trend {
             font-size: 13px;
+            display: flex;
+            align-items: center;
+            gap: 5px;
+            color: var(--secondary);
         }
 
         .trend-up {
             color: var(--success);
+            font-weight: 600;
         }
 
         .trend-down {
             color: var(--danger);
+            font-weight: 600;
         }
 
-        /* Tables */
+        /* --- TABLES --- */
         .table-container {
             background: white;
             border-radius: 16px;
             padding: 24px;
-            box-shadow: 0 2px 12px rgba(0, 0, 0, 0.04);
+            box-shadow: var(--shadow-sm);
+            border: 1px solid var(--border-color);
             margin-bottom: 30px;
         }
 
@@ -251,25 +293,38 @@
         .section-header h3 {
             font-size: 18px;
             font-weight: 700;
+            color: var(--dark);
         }
 
         table {
             width: 100%;
-            border-collapse: collapse;
+            border-collapse: separate;
+            border-spacing: 0;
         }
 
         th {
             text-align: left;
-            padding: 12px 16px;
+            padding: 16px;
             color: var(--secondary);
             font-weight: 600;
-            font-size: 13px;
-            border-bottom: 2px solid var(--bg);
+            font-size: 12px;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+            border-bottom: 1px solid var(--border-color);
+            background: #f8fafc;
+        }
+
+        th:first-child {
+            border-top-left-radius: 8px;
+        }
+
+        th:last-child {
+            border-top-right-radius: 8px;
         }
 
         td {
             padding: 16px;
-            border-bottom: 1px solid var(--bg);
+            border-bottom: 1px solid var(--border-color);
             vertical-align: middle;
             font-size: 14px;
         }
@@ -278,64 +333,70 @@
             border-bottom: none;
         }
 
+        tr:hover td {
+            background-color: #f8fafc;
+        }
+
+        /* Badges & Buttons */
         .badge {
+            display: inline-block;
             padding: 4px 10px;
-            border-radius: 20px;
-            font-size: 12px;
-            font-weight: 600;
-        }
-
-        .badge-admin {
-            background-color: var(--dark);
-            color: white;
-        }
-
-        .badge-user {
-            background-color: var(--bg);
-            color: var(--secondary);
+            border-radius: 99px;
+            font-size: 11px;
+            font-weight: 700;
         }
 
         .badge-active {
-            background-color: rgba(25, 135, 84, 0.1);
-            color: var(--success);
+            background: #dcfce7;
+            color: #166534;
         }
 
-        .progress-bar {
-            width: 100px;
-            height: 6px;
-            background: var(--bg);
-            border-radius: 3px;
-            overflow: hidden;
+        .badge-admin {
+            background: #e0e7ff;
+            color: #3730a3;
         }
 
-        .progress-fill {
-            height: 100%;
-            background: var(--primary);
-            border-radius: 3px;
+        .badge-user {
+            background: #f1f5f9;
+            color: #475569;
         }
 
-        button.btn {
+        .btn {
             background: var(--primary);
             color: white;
             border: none;
             padding: 8px 16px;
-            border-radius: 6px;
+            border-radius: 8px;
             cursor: pointer;
             font-weight: 500;
-            transition: 0.2s;
+            font-size: 13px;
+            transition: all 0.2s;
+            box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
         }
 
-        button.btn:hover {
-            filter: brightness(110%);
+        .btn:hover {
+            background: var(--primary-dark);
+            transform: translateY(-1px);
         }
 
-        button.btn-outline {
-            background: transparent;
-            border: 1px solid var(--secondary);
+        .btn-outline {
+            background: white;
+            border: 1px solid var(--border-color);
             color: var(--secondary);
         }
 
-        /* Loading */
+        .btn-outline:hover {
+            background: #f8fafc;
+            border-color: #cbd5e1;
+            color: var(--dark);
+        }
+
+        .btn-sm {
+            font-size: 12px;
+            padding: 4px 12px;
+        }
+
+        /* --- UTILS --- */
         .hidden {
             display: none !important;
         }
@@ -349,15 +410,48 @@
             display: block;
         }
 
+        /* Loader */
+        .loader {
+            display: inline-flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: 15px;
+            color: var(--secondary);
+            font-weight: 600;
+            font-size: 14px;
+            margin-bottom: 20px;
+        }
+
+        .loader::before {
+            content: '';
+            width: 40px;
+            height: 40px;
+            border: 4px solid #cbd5e1;
+            border-bottom-color: var(--primary);
+            border-radius: 50%;
+            animation: rotation 1s linear infinite;
+        }
+
         @keyframes fadeIn {
             from {
                 opacity: 0;
-                transform: translateY(10px);
+                transform: translateY(5px);
             }
 
             to {
                 opacity: 1;
                 transform: translateY(0);
+            }
+        }
+
+        @keyframes rotation {
+            0% {
+                transform: rotate(0deg);
+            }
+
+            100% {
+                transform: rotate(360deg);
             }
         }
     </style>
@@ -410,11 +504,11 @@
                             <div class="card-title">User Accounts</div>
                             <div class="card-value" id="stats-total-users">0</div>
                         </div>
-                        <div class="card-icon bg-blue">users</div>
+                        <div class="card-icon bg-blue">👥</div>
                     </div>
                     <div class="card-trend" style="font-size: 12px; color: #6c757d;">
-                        <div>✅ Signed Up: <strong id="stats-signed" style="color: #198754;">0</strong></div>
-                        <div>👤 Unsigned: <strong id="stats-unsigned" style="color: #fd7e14;">0</strong></div>
+                        <div>✅ Signed Up: <strong id="stats-signed" style="color: #166534;">0</strong></div>
+                        <div>👤 Unsigned: <strong id="stats-unsigned" style="color: #d97706;">0</strong></div>
                     </div>
                 </div>
 
@@ -424,7 +518,7 @@
                             <div class="card-title">Threats Blocked</div>
                             <div class="card-value" id="stats-threats">0</div>
                         </div>
-                        <div class="card-icon bg-red">shield</div>
+                        <div class="card-icon bg-red">🛡️</div>
                     </div>
                     <div class="card-trend"><span class="trend-up">↑ 85</span> malicious sites</div>
                 </div>
@@ -435,7 +529,7 @@
                             <div class="card-title">Active Sessions</div>
                             <div class="card-value">1</div>
                         </div>
-                        <div class="card-icon bg-green">wifi</div>
+                        <div class="card-icon bg-green">📡</div>
                     </div>
                     <div class="card-trend"><span class="trend-down">●</span> Currently Online</div>
                 </div>
@@ -446,7 +540,7 @@
                             <div class="card-title">System Health</div>
                             <div class="card-value">98%</div>
                         </div>
-                        <div class="card-icon bg-yellow">activity</div>
+                        <div class="card-icon bg-yellow">⚡</div>
                     </div>
                     <div class="card-trend">Server Status: <strong>Stable</strong></div>
                 </div>
@@ -500,7 +594,7 @@
             </div>
         </div>
 
-        <!-- XP SYSTEM TAB (Removed) -->
+        <!-- REPLACED XP SYSTEM TAB -->
 
         <!-- REPORTS TAB -->
         <div id="reports" class="tab-content">
@@ -615,7 +709,7 @@
                     <div style="background:#f8f9fa; padding:15px; border-radius:8px;">
                         <div style="font-size:12px; color:#6c757d;">EXPERIENCE</div>
                         <div style="font-size:20px; font-weight:bold;"><span id="modal-xp">0</span> XP</div>
-                        <div style="font-size:12px; color:#198754;">Level <span id="modal-level">1</span></div>
+                        <div style="font-size:12px; color:#166534;">Level <span id="modal-level">1</span></div>
                     </div>
                     <div style="background:#f8f9fa; padding:15px; border-radius:8px;">
                         <div style="font-size:12px; color:#6c757d;">SAFETY STREAK</div>
@@ -669,7 +763,7 @@
                         style="font-size:11px; color:#6c757d; font-weight:700; text-transform:uppercase; letter-spacing:0.5px;">Reported
                         Resource</label>
                     <div id="report-modal-url"
-                        style="background:#f8f9fa; padding:12px; border-radius:8px; font-family:monospace; color:#0d6efd; word-break:break-all; margin-top:8px; border:1px solid #dee2e6; font-size:14px;">
+                        style="background:#f8f9fa; padding:12px; border-radius:8px; font-family:monospace; color:#2563eb; word-break:break-all; margin-top:8px; border:1px solid #dee2e6; font-size:14px;">
                         http://example.com/login
                     </div>
                 </div>
@@ -722,7 +816,7 @@
         background-color: #f8f9fa; z-index: 9999; display: flex; align-items: center; justify-content: center; 
         flex-direction: column; transition: opacity 0.5s ease;">
         <div id="lock-status" style="text-align: center;">
-            <div class="loader" style="font-size: 24px;">🔄 Verifying Access...</div>
+            <div class="loader" style="font-size: 24px;">Verifying Access...</div>
         </div>
     </div>
 
@@ -731,7 +825,6 @@
     <script>
         // Add logout functionality
         document.addEventListener('DOMContentLoaded', () => {
-            // Add logout button to user panel if it doesn't exist
             const userPanel = document.querySelector('.user-panel');
             if (userPanel && !document.getElementById('admin-logout-btn')) {
                 const logoutBtn = document.createElement('button');
