added readme.md file

--- a/dashboard.html
+++ b/dashboard.html
@@ -116,6 +116,26 @@
             background: rgba(0, 0, 0, 0.1);
         }
 
+        .user-panel h6 {
+            font-size: 11px;
+            text-transform: uppercase;
+            color: #94a3b8;
+            margin-bottom: 12px;
+            letter-spacing: 0.5px;
+        }
+
+        .user-panel p {
+            font-size: 16px;
+            font-weight: 600;
+            color: white;
+            margin-bottom: 12px;
+        }
+
+        #user-info {
+            flex-direction: column;
+            gap: 4px;
+        }
+
         /* --- MAIN CONTENT --- */
         main {
             flex: 1;
