--- a/dashboard.html
+++ b/dashboard.html
@@ -213,8 +213,9 @@
             border-radius: 16px;
             padding: 24px;
             box-shadow: var(--shadow-sm);
+            box-shadow: var(--shadow-sm);
             border: 1px solid var(--border-color);
-            transition: all 0.3s ease;
+            /* transition: all 0.3s ease; <-- REMOVED to prevent pulse/zoom effect */
             position: relative;
             overflow: hidden;
             display: flex;
@@ -223,9 +224,16 @@
         }
 
         .stat-card:hover {
-            transform: translateY(-4px);
-            box-shadow: var(--shadow-md);
             border-color: #cbd5e1;
+            /* transform: translateY(-4px);  <-- Removed to prevent motion */
+            /* box-shadow: var(--shadow-md); <-- Removed to prevent expansion feel */
+        }
+
+        canvas,
+        canvas:hover {
+            transform: none !important;
+            transition: none !important;
+            box-shadow: none !important;
         }
 
         .stat-title {
@@ -249,6 +257,18 @@
 
         .stat-card.safe .stat-value {
             color: var(--success);
+        }
+
+        /* --- CHART RIGIDITY --- */
+        #threat-pie-canvas {
+            width: 200px !important;
+            height: 200px !important;
+            max-width: 200px !important;
+            max-height: 200px !important;
+            min-width: 200px !important;
+            min-height: 200px !important;
+            flex-shrink: 0 !important;
+            display: block !important;
         }
 
         /* --- TABLES --- */
@@ -709,13 +729,31 @@
             </div>
 
             <div class="stats-grid">
-                <div class="stat-card safe">
-                    <div class="stat-title">Safe Sites</div>
-                    <div class="stat-value" id="total-safe">0</div>
-                </div>
-                <div class="stat-card danger">
-                    <div class="stat-title">Total Threats</div>
-                    <div class="stat-value" id="total-threats">0</div>
+                <div class="stat-card"
+                    style="grid-column: span 2; display: flex; flex-direction: column; justify-content: center; align-items: center;">
+                    <!-- RIGID CONTAINER TO PREVENT RESIZING -->
+                    <div
+                        style="width:220px; height:220px; min-width:220px; min-height:220px; flex-shrink:0; position:relative; display: flex; align-items: center; justify-content: center;">
+                        <canvas id="threat-pie-canvas" width="200" height="200"
+                            style="display:block; width:200px !important; height:200px !important;"></canvas>
+                    </div>
+
+                    <div
+                        style="margin-top:20px; display:grid; grid-template-columns: 1fr 1fr 1fr; gap:15px; font-size:12px; font-weight:600; color:#64748b; width: 100%; max-width: 300px;">
+                        <div style="display:flex; align-items:center; gap:8px;">
+                            <div style="width:12px; height:6px; border-radius:2px; background:#dc3545;"></div> Phishing
+                        </div>
+                        <div style="display:flex; align-items:center; gap:8px;">
+                            <div style="width:12px; height:6px; border-radius:2px; background:#0d6efd;"></div> Safe
+                        </div>
+                        <div style="display:flex; align-items:center; gap:8px;">
+                            <div style="width:12px; height:6px; border-radius:2px; background:#ffc107;"></div>
+                            Suspicious
+                        </div>
+                    </div>
+                    <!-- Date Range Label for Weekly View -->
+                    <div id="chart-date-range" style="margin-top:12px; font-size:11px; color:#94a3b8; font-weight:500;">
+                    </div>
                 </div>
                 <div class="stat-card">
                     <div class="stat-title">Sites Scanned</div>
@@ -736,16 +774,21 @@
         <div id="tab-logs" class="tab-content">
             <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
                 <h2 class="section-title" style="margin: 0;">Recent Activity Log</h2>
-                <button id="clear-history"
-                    style="background: white; border: 1px solid var(--danger); color: var(--danger); padding: 8px 16px; border-radius: 6px; cursor: pointer; font-size: 12px; font-weight: 600;">Clear
-                    History</button>
+                <div style="display:flex; gap:10px;">
+                    <button id="refresh-log"
+                        style="background: white; border: 1px solid var(--primary); color: var(--primary); padding: 8px 16px; border-radius: 6px; cursor: pointer; font-size: 12px; font-weight: 600;">Refresh</button>
+                    <button id="clear-history"
+                        style="background: white; border: 1px solid var(--danger); color: var(--danger); padding: 8px 16px; border-radius: 6px; cursor: pointer; font-size: 12px; font-weight: 600;">Clear
+                        History</button>
+                </div>
             </div>
             <table class="log-table">
                 <thead>
                     <tr>
                         <th>Time</th>
                         <th>Domain</th>
-                        <th>Risk Score</th>
+                        <th>Trust Score</th>
+                        <th>Threat Level (0-100)</th>
                         <th>Status</th>
                     </tr>
                 </thead>
@@ -874,6 +917,8 @@
     <div id="print-report-container"></div>
 
     <script src="js/auth.js"></script>
+    <script src="js/threat_intel.js"></script>
+    <script src="js/simple_charts.js"></script>
     <script src="js/dashboard.js"></script>
     <script>
         // Tab Logic
