trying to solve conflicts

--- a/admin.html
+++ b/admin.html
@@ -616,6 +616,7 @@
                 <div class="section-header">
                     <h3>CrowdShield - Reported Phishing Sites</h3>
                     <button class="btn btn-outline" id="btn-refresh-reports">Refresh List</button>
+                    <button class="btn btn-outline" id="btn-delete-all-reports" style="color: #dc3545; border-color: #dc3545; margin-left: 10px;">Delete All</button>
                 </div>
                 <p style="margin-bottom:20px; color:#6c757d;">User-submitted reports. Verify and ban malicious domains.
                 </p>
